log

Fri 18 Aug 2023 10:20:17 PM UTC: 
 exercises.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
 tests:  0|6
total_score: 10/70
26e43ae
Fri 18 Aug 2023 10:32:08 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
06c9f08
Fri 18 Aug 2023 11:21:47 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:42:4: error: ‘nuevoSize’ undeclared (first use in this function); did you mean ‘newSize’?
   42 |   *nuevoSize = 0;
      |    ^~~~~~~~~
      |    newSize
exercises.c:42:4: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
0420cda
Fri 18 Aug 2023 11:26:32 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:42:4: error: ‘nuevoSize’ undeclared (first use in this function); did you mean ‘newSize’?
   42 |   *nuevoSize = 0;
      |    ^~~~~~~~~
      |    newSize
exercises.c:42:4: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
eb3c5c5
Fri 18 Aug 2023 11:27:04 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|4
total_score: 30/70
a0a7222
Fri 18 Aug 2023 11:27:16 PM UTC: 
 exercises.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|4
total_score: 30/70
a1e9332
Sat 19 Aug 2023 12:11:05 AM UTC: 
 exercises.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:62:9: error: ‘resultado’ undeclared (first use in this function); did you mean ‘result’?
   62 |         resultado[k++] = (arr1[i] < arr2[j]) ? arr1[i++] : arr2[j++];
      |         ^~~~~~~~~
      |         result
exercises.c:62:9: note: each undeclared identifier is reported only once for each function it appears in
exercises.c: At top level:
exercises.c:73:1: error: expected identifier or ‘(’ before ‘}’ token
   73 | }
      | ^
Compilation failed
5720cab
Sat 19 Aug 2023 12:11:21 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c:73:1: error: expected identifier or ‘(’ before ‘}’ token
   73 | }
      | ^
Compilation failed
042ac78
Sat 19 Aug 2023 12:11:33 AM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|3
total_score: 40/70
e354c8f
Sat 19 Aug 2023 12:12:55 AM UTC: 
 exercises.c | 16 ++++++++++------
 1 file changed, 10 insertions(+), 6 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:61:11: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   61 |     for (i, j, k; i < size1 && j < tam2; ) {
      |           ^
exercises.c:61:14: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   61 |     for (i, j, k; i < size1 && j < tam2; ) {
      |              ^
exercises.c:61:5: error: statement with no effect [-Werror=unused-value]
   61 |     for (i, j, k; i < size1 && j < tam2; ) {
      |     ^~~
exercises.c:61:36: error: ‘tam2’ undeclared (first use in this function)
   61 |     for (i, j, k; i < size1 && j < tam2; ) {
      |                                    ^~~~
exercises.c:61:36: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
646d241
Sat 19 Aug 2023 12:13:02 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:61:11: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   61 |     for (i, j, k; i < size1 && j < size2; ) {
      |           ^
exercises.c:61:14: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   61 |     for (i, j, k; i < size1 && j < size2; ) {
      |              ^
exercises.c:61:5: error: statement with no effect [-Werror=unused-value]
   61 |     for (i, j, k; i < size1 && j < size2; ) {
      |     ^~~
cc1: all warnings being treated as errors
Compilation failed
1082fa2
Sat 19 Aug 2023 12:14:31 AM UTC: 
 exercises.c | 21 ++++++++++++++-------
 1 file changed, 14 insertions(+), 7 deletions(-)
 tests:  0|3
total_score: 40/70
b2c908d
